--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  font-family: 'Anton', sans-serif;
+}
+
 header {
   background: var(--main-bg);
 }
@@ -22,7 +26,7 @@ header {
 h1,
 h2,
 h3 {
-  font-family: 'Fira Sans', sans-serif !important;
+  font-family: 'Anton', sans-serif !important;
 }
 
 
